# pi_spine_rs

./: Cargo.toml  README.md
crates/pi_spine_render/: Cargo.toml
crates/pi_spine_render/src/: ecs.rs  lib.rs  renderer.rs  vertex_buffer.rs
crates/pi_spine_render/src/bind_groups/: mod.rs
crates/pi_spine_render/src/binds/: mod.rs  param.rs
crates/pi_spine_render/src/shaders/: colored.frag  colored.vert  colored_textured.frag  colored_textured.vert  mod.rs  two_colored_textured.frag  two_colored_textured.vert
documents/: spine.drawio
examples/: main.rs
examples/renderer/: indices.rs  mod.rs  renderer.rs  renderer_bevy.rs  vertices.rs
src/: error.rs  lib.rs  material.rs  mesh.rs  mesh_renderer.rs  pipeline.rs  polygon_batcher.rs  render.rs  shape_renderer.rs
src/shaders/: colored.frag  colored.vert  colored_textured.frag  colored_textured.vert  mod.rs  two_colored_textured.frag  two_colored_textured.vert
