[package]
name = "pi_spine_rs"
version = "0.0.1"
authors = ["baip0002 <2494156981@qq.com>"]
edition = "2021"
description = "Pi Spine Render."
repository = "https://github.com/GaiaWorld/pi_spine_rs"
license = "MIT OR Apache-2.0"
keywords = ["scene Render"]

[workspace]
members = ["crates/*"]

[dependencies]
pi_spine_render = { path = "crates/pi_spine_render" }

pi_render = { git = "https://github.com/GaiaWorld/pi_render" }
render_utils = { git = "https://github.com/GaiaWorld/pi_render" }
render_derive = { git = "https://github.com/GaiaWorld/pi_render" }

pi_scene_math = { git = "https://github.com/GaiaWorld/pi_scene" }
pi_animation = { git = "https://github.com/GaiaWorld/pi_animation.git" }
pi_curves = { git = "https://github.com/GaiaWorld/pi_curves.git" }

pi_assets = "0.10"
pi_share = "0.4"
pi_ecs_macros = { git = "https://github.com/GaiaWorld/pi_ecs.git" }
pi_ecs_utils = { git = "https://github.com/GaiaWorld/pi_ecs_utils.git" }
pi_ecs = { git = "https://github.com/GaiaWorld/pi_ecs.git" }
pi_atom = { version="0.2", features = ["serde"] }
pi_hal = { git = "https://github.com/GaiaWorld/pi_hal.git" }

wgpu = "0.14"
env_logger = "0.9"
log = "0.4"
smallvec = "1.9"
crossbeam="0.8"
futures = "0.3"
winit = { git = "http://ser.yinengyun.com:10082/tech/winit.git" }

[patch."https://github.com/GaiaWorld/pi_ecs"]
pi_ecs = { path = "../pi_ecs" }

[patch."https://github.com/GaiaWorld/pi_hal"]
pi_hal = { path = "../pi_hal" }

[patch."https://github.com/GaiaWorld/pi_render"]
pi_render = { path = "../pi_render" }
render_utils = { path = "../pi_render/crates/render_utils" }
render_derive = { path = "../pi_render/crates/render_derive" }

[patch."https://github.com/GaiaWorld/pi_scene"]
pi_scene = { path = "../pi_scene" }
pi_scene_math = { path = "../pi_scene/crates/pi_scene_math" }

[patch."https://github.com/GaiaWorld/pi_animation"]
pi_animation = { path = "../pi_animation" }

[patch."https://github.com/GaiaWorld/pi_curves"]
pi_curves = { path = "../pi_curves" }

[patch."http://ser.yinengyun.com:10082/tech/winit.git"]
winit = { path = "../winit" }

[dev-dependencies]
image = "0.24"
env_logger = "0.9"
pollster = "0.2"

[net]
git-fetch-with-cli = true
offline = true

# [[example]]
