[package]
name = "pi_spine_render"
version = "0.0.1"
authors = ["baip0002 <2494156981@qq.com>"]
edition = "2021"
description = "Pi Spine Render."
repository = "https://github.com/GaiaWorld/pi_spine_rs"
license = "MIT OR Apache-2.0"
keywords = ["scene Render"]

[dependencies]
wgpu = "0.15"
env_logger = "0.9"
log = "0.4"
smallvec = "1.9"
crossbeam="0.8"
futures = "0.3"

parry3d = "0.9"
lazy_static = "1.4"
pi_spatial = { git = "https://github.com/GaiaWorld/pi_spatial.git" }
ncollide3d = "0.33"

approx = "0.5"
naga = { version = "0.11", features = [
    "glsl-in",
    "spv-in",
    "spv-out",
    "wgsl-in",
    "wgsl-out",
] }
bytemuck = { version = "1.4", features = ["derive"] }

wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

pi_slotmap = "0.1"
pi_map = "0.1"
pi_hash = "0.1"
pi_share = "0.4"
pi_graph = "0.1"
pi_atom = { version="0.2", features = ["serde"] }
pi_assets = "0.11"
pi_futures = "0.1"
pi_async = "0.5.11"
pi_slotmap_tree = "0.3"
pi_hal = { git = "https://github.com/GaiaWorld/pi_hal.git" }

bevy = { version="0.10", default-features = false, features=["bevy_winit"] }
pi_bevy_render_plugin = { git = "https://github.com/GaiaWorld/pi_render_bevy.git" }
pi_bevy_asset = { git = "https://github.com/GaiaWorld/pi_render_bevy.git" }
pi_bevy_ecs_extend = { git = "https://github.com/GaiaWorld/pi_render_bevy.git" }
pi_final_render_target = { git = "https://github.com/GaiaWorld/pi_render_bevy.git" }

pi_render = { git = "https://github.com/GaiaWorld/pi_render", branch="bevy_shader" }
render_utils = { git = "https://github.com/GaiaWorld/pi_render", branch="bevy_shader" }
render_derive = { git = "https://github.com/GaiaWorld/pi_render", branch="bevy_shader" }

pi_scene_math = { git = "https://github.com/GaiaWorld/pi_scene" }

[patch."https://github.com/GaiaWorld/pi_render"]
pi_render = { path = "../../../pi_render" }
render_utils = { path = "../../../pi_render/crates/render_utils" }
render_derive = { path = "../../../pi_render/crates/render_derive" }

[patch."https://github.com/GaiaWorld/pi_render_bevy"]
pi_bevy_render_plugin = { path = "../../../pi_render_bevy/crates/render" }
pi_bevy_asset = { path = "../../../pi_render_bevy/crates/asset" }
pi_bevy_ecs_extend = { path = "../../../pi_render_bevy/crates/ecs_extend" }
pi_final_render_target = { path = "../../../pi_render_bevy/crates/final_render_target" }

# [[example]]
